# cam_tracker

./: CMakeLists.txt  README.md  package.xml
config/: debug_console.config  tracker_config.yaml
launch/: cam_tracker.launch  cam_tracker_debug.launch  cam_tracker_rscam.launch  cam_tracker_usbcam.launch
msg/: CompleteDetection.msg  Detection.msg  DetectionArray.msg
notebooks/: train-yolo11-object-detection-on-custom-dataset.ipynb
scripts/: cam_tracker_node.py  cam_tracker_node.py.old  person_tracker_node.py  visualizer_node.py  visualizer_node_rs.py
src/: detection_test.cpp
test/: CAM_TRACKER_UPDATE_README.md  DETAILED_LOGGING_README.md  OPENCV_FIX_README.md  TRACKING_FIX_README.md  quick_start.sh  quick_startup_test.sh  quick_test_and_run.sh  set_log_level.sh  start_cam_tracker_quiet.sh  start_tracker_demo.sh  test_cam_tracker.py  test_display.py  test_opencv_logging.py  test_system.py
